Revert block paddings to their initial states since this does not solve the vertical/horizontal alignments

--- a/plugins/woocommerce-blocks/assets/js/blocks/customer-account/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/customer-account/style.scss
@@ -24,7 +24,7 @@
 		gap: em($gap-smaller);
 		white-space: nowrap;
 		line-height: 1;
-		padding: 0;
+		padding: em($gap-smaller);
 
 		&:hover {
 			text-decoration: underline !important;
